# vr-reservation-tochka

./: .env.example  Makefile  docker-compose.deploy.yml  docker-compose.yml
Booking MySelf/: package-lock.json  package.json
Booking MySelf/src/: App.css  App.jsx  RegisterForm.jsx
backend/: Dockerfile.backend  main.py  pyproject.toml  run.sh
backend/config/: config.py
backend/migrations/: env.py
backend/src/auth/: auth_router.py
backend/src/auth/utils/: create_user.py  jwt_manager.py  login_user.py  password_manager.py
backend/src/models/: bookings.py  users.py
backend/src/routers/: admin_router.py  bookings_router.py  email_router.py  headsets_router.py  users_router.py
backend/src/schemas/: booking_schema.py  headset_schema.py  user_schema.py
backend/src/services/: celery_service.py  email_service.py
backend/src/utils/: booking_utils.py  user_utils.py
email-sender/: .env.example  Dockerfile.email-sender
email-sender/app/: email_service.py  main.py  schemas.py
frontend/: Dockerfile.frontend  Dockerfile.frontend.build  package-lock.json  package.json
frontend/nginx/: nginx.conf
frontend/src/: App.css  App.jsx  LoginForm.jsx  LogoutButton.jsx  RegisterForm.jsx
